--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -3,7 +3,7 @@ mail.requirement.added.subject=Plex: New media added to watchlist
 mail.watchlist.subject=Plex: Your watchlist
 mail.watchlist.body.header.available=Media fully downloaded and waiting to be watched:
 mail.watchlist.body.header.not-yet-available=Media waiting to be downloaded:
-mail.watchlist.body.media.movie=Movie: {0} ({1})
+mail.watchlist.body.media.movie=Movie: {0}
 mail.watchlist.body.media.series=Series: {0} - Season {1}
 mail.watchlist.body.media.series.episodes=Waiting for episodes {0}
 discord.media.available.subject=Plex: Media from watchlist available
@@ -11,7 +11,7 @@ discord.requirement.added.subject=Plex: New media added to watchlist
 discord.watchlist.subject=Plex: Your watchlist
 discord.watchlist.body.header.available=Media fully downloaded and waiting to be watched:
 discord.watchlist.body.header.not-yet-available=Media waiting to be downloaded:
-discord.watchlist.body.media.movie=Movie: {0} ({1})
+discord.watchlist.body.media.movie=Movie: {0}
 discord.watchlist.body.media.series=Series: {0} - Season {1}
 discord.watchlist.body.media.series.episodes=Waiting for episodes {0}
 
