--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -14,4 +14,25 @@ discord.watchlist.body.header.not-yet-available=Media waiting to be downloaded:
 discord.watchlist.body.media.movie=Movie: {0}
 discord.watchlist.body.media.series=Series: {0} - Season {1}
 discord.watchlist.body.media.series.episodes=Waiting for episodes {0}
+media.availability.downloaded=Available
+media.availability.downloading=Downloading
+media.availability.manual=Manual
+media.type.movie=Movie
+media.type.tv=Series
+web.auth.email=E-Mail
+web.auth.header=Login with your Plex.tv account
+web.auth.logged-out=You have been logged out.
+web.auth.login=Login
+web.auth.otp=OTP
+web.auth.password=Password
+web.media-list.soon-removed.header=Medias soon removed
+web.media-list.table.availability=Availability
+web.media-list.table.count=Count
+web.media-list.table.id=ID
+web.media-list.table.name=Name
+web.media-list.table.season=Season
+web.media-list.table.type=Type
+web.media-list.watch-list.header=Your watchlist
+web.navbar.media-list=Media list
+web.navbar.logout=Logout
 
