--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -1,12 +1,18 @@
-mail.media.available.subject=Plex: Media from watchlist available
+mail.media.available.subject=Plex: Media from your watchlist available
+mail.media.deleted.subject=Plex: Media from your watchlist deleted
 mail.requirement.added.subject=Plex: New media added to watchlist
+mail.requirement.manually-watched.subject=Plex: Media from your watchlist manually marked as watched
+mail.requirement.manually-abandoned.subject=Plex: Media from your watchlist manually marked as abandoned
 mail.watchlist.subject=Plex: Your watchlist
 mail.watchlist.body.header.available=Media fully downloaded and waiting to be watched:
 mail.watchlist.body.header.not-yet-available=Media waiting to be downloaded:
 mail.watchlist.body.media.movie=Movie: {0}
 mail.watchlist.body.media.series=Series: {0} - Season {1}
 mail.watchlist.body.media.series.episodes=Waiting for episodes {0}
-discord.media.available.subject=Plex: Media from watchlist available
+discord.media.available.subject=Plex: Media from your watchlist available
+discord.media.deleted.subject=Plex: Media from your watchlist deleted
+discord.requirement.manually-watched.subject=Plex: Media from your watchlist manually marked as watched
+discord.requirement.manually-abandoned.subject=Plex: Media from your watchlist manually marked as abandoned
 discord.requirement.added.subject=Plex: New media added to watchlist
 discord.watchlist.subject=Plex: Your watchlist
 discord.watchlist.body.header.available=Media fully downloaded and waiting to be watched:
@@ -29,10 +35,29 @@ web.media-list.soon-removed.header=Medias soon removed
 web.media-list.table.availability=Availability
 web.media-list.table.count=Count
 web.media-list.table.id=ID
+web.media-list.table.abandon=Abandon
 web.media-list.table.name=Name
 web.media-list.table.season=Season
 web.media-list.table.type=Type
 web.media-list.watch-list.header=Your watchlist
+web.navbar.admin.media.delete=Delete media
+web.navbar.admin.requirement.add=Add requirement
+web.navbar.admin.requirement.complete=Complete requirement
+web.navbar.admin.requirement.abandon=Abandon requirement
 web.navbar.media-list=Media list
 web.navbar.logout=Logout
-
+web.admin.media.delete.header=Delete media
+web.admin.media.delete.media=Media
+web.admin.media.delete.delete=Delete
+web.admin.requirement.complete.header=Complete requirement
+web.admin.requirement.complete.submit=Complete
+web.admin.requirement.complete.requirement=Requirement
+web.admin.requirement.abandon.header=Abandon requirement
+web.admin.requirement.abandon.submit=Abandon
+web.admin.requirement.abandon.requirement=Requirement
+web.admin.requirement.add.header=Add requirement
+web.admin.requirement.add.submit=Add
+web.admin.requirement.add.group=User group
+web.admin.requirement.add.overseerr=Overseerr ID
+web.admin.requirement.add.season=Season
+web.admin.requirement.add.type=Type
