--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -1,5 +1,8 @@
 mail.media.available.subject=Plex : Média de la liste de lecture disponible
+mail.media.deleted.subject=Plex : Média de votre liste de lecture supprimé
 mail.requirement.added.subject=Plex : Nouveau média ajouté é la liste de lecture
+mail.requirement.manually-watched.subject=Plex : Média de votre liste de lecture manuellement marqué comme regardé
+mail.requirement.manually-abandoned.subject=Plex : Média de votre liste de lecture manuellement marqué comme abandonné
 mail.watchlist.subject=Plex : Votre liste de lecture
 mail.watchlist.body.header.available=Médias disponibles en attente de visionnage :
 mail.watchlist.body.header.not-yet-available=Médias en attente de téléchargement :
@@ -7,6 +10,9 @@ mail.watchlist.body.media.movie=Film : {0}
 mail.watchlist.body.media.series=Série : {0} - Saison {1}
 mail.watchlist.body.media.series.episodes=En attente des épisodes {0}
 discord.media.available.subject=Plex : Média de la liste de lecture disponible
+discord.media.deleted.subject=Plex : Média de votre liste de lecture supprimé
+discord.requirement.manually-watched.subject=Plex : Média de votre liste de lecture manuellement marqué comme regardé
+discord.requirement.manually-abandoned.subject=Plex : Média de votre liste de lecture manuellement marqué comme abandonné
 discord.requirement.added.subject=Plex : Nouveau média ajouté é la liste de lecture
 discord.watchlist.subject=Plex : Votre liste de lecture
 discord.watchlist.body.header.available=Médias disponibles en attente de visionnage :
@@ -29,10 +35,30 @@ web.media-list.soon-removed.header=Médias bientôt supprimés
 web.media-list.table.availability=Disponibilité
 web.media-list.table.count=Total
 web.media-list.table.id=ID
+web.media-list.table.abandon=Abandonner
 web.media-list.table.name=Nom
 web.media-list.table.season=Saison
 web.media-list.table.type=Type
 web.media-list.watch-list.header=Votre liste de lecture
+web.navbar.admin.media.delete=Supprimer média
+web.navbar.admin.requirement.add=Ajout exigence
+web.navbar.admin.requirement.complete=Compléter exigence
+web.navbar.admin.requirement.abandon=Abandonner exigence
 web.navbar.media-list=Liste de lecture
 web.navbar.logout=Déconnexion
+web.admin.media.delete.header=Supprimer média
+web.admin.media.delete.media=Média
+web.admin.media.delete.delete=Supprimer
+web.admin.requirement.complete.header=Compléter exigence
+web.admin.requirement.complete.submit=Compléter
+web.admin.requirement.complete.requirement=Exigence
+web.admin.requirement.abandon.header=Abandonner exigence
+web.admin.requirement.abandon.submit=Abandonner
+web.admin.requirement.abandon.requirement=Exigence
+web.admin.requirement.add.header=Ajout exigence
+web.admin.requirement.add.submit=Ajouter
+web.admin.requirement.add.group=Groupe utilisateur
+web.admin.requirement.add.overseerr=ID Overseerr
+web.admin.requirement.add.season=Saison
+web.admin.requirement.add.type=Type
 
