Success/error auth pages + logs

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -61,3 +61,6 @@ web.admin.requirement.add.group=User group
 web.admin.requirement.add.overseerr=Overseerr ID
 web.admin.requirement.add.season=Season
 web.admin.requirement.add.type=Type
+web.auth.error.header=Failed to log in
+web.auth.error.back=Back
+web.auth.success.header=You are now logged in, you'll be redirected to the homepage soon
