--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -61,4 +61,7 @@ web.admin.requirement.add.group=Groupe utilisateur
 web.admin.requirement.add.overseerr=ID Overseerr
 web.admin.requirement.add.season=Saison
 web.admin.requirement.add.type=Type
+web.auth.error.header=Erreur de connexion
+web.auth.error.back=Retour
+web.auth.success.header=Vous êtes connecté, vous allez bientôt être redirigé
 
