Plex oauth & remove jaxb

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -25,12 +25,9 @@ media.availability.downloading=Downloading
 media.availability.manual=Manual
 media.type.movie=Movie
 media.type.tv=Series
-web.auth.email=E-Mail
 web.auth.header=Login with your Plex.tv account
 web.auth.logged-out=You have been logged out.
 web.auth.login=Login
-web.auth.otp=OTP
-web.auth.password=Password
 web.media-list.soon-removed.header=Medias soon removed
 web.media-list.table.availability=Availability
 web.media-list.table.count=Count
@@ -64,3 +61,5 @@ web.admin.requirement.add.type=Type
 web.auth.error.header=Failed to log in
 web.auth.error.back=Back
 web.auth.success.header=You are now logged in, you'll be redirected to the homepage soon
+web.auth.post-plex=When authentication is done on Plex.tv, click on the button below
+web.auth.pre-plex=Click on the button below to log on Plex.tv, then come back to this page
