--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -25,12 +25,9 @@ media.availability.downloading=En téléchargement
 media.availability.manual=Manuel
 media.type.movie=Film
 media.type.tv=Série
-web.auth.email=E-Mail
 web.auth.header=Connectez-vous avec votre compte Plex.tv
 web.auth.logged-out=Vous avez été déconnecté.
 web.auth.login=Connexion
-web.auth.otp=OTP
-web.auth.password=Mot de passe
 web.media-list.soon-removed.header=Médias bientôt supprimés
 web.media-list.table.availability=Disponibilité
 web.media-list.table.count=Total
@@ -64,4 +61,6 @@ web.admin.requirement.add.type=Type
 web.auth.error.header=Erreur de connexion
 web.auth.error.back=Retour
 web.auth.success.header=Vous êtes connecté, vous allez bientôt être redirigé
+web.auth.post-plex=Quand l'autentification sur Plex.tv est terminée, cliquez sur le boutton ci-dessous
+web.auth.pre-plex=Cliquez sur le boutton ci-dessous pour vous connecter sur Plex.tv, puis revenez sur cette page
 
