Add listing of all requirements

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -41,6 +41,7 @@ web.navbar.admin.media.delete=Delete media
 web.navbar.admin.requirement.add=Add requirement
 web.navbar.admin.requirement.complete=Complete requirement
 web.navbar.admin.requirement.abandon=Abandon requirement
+web.navbar.admin.requirement.list=List requirements
 web.navbar.media-list=Media list
 web.navbar.logout=Logout
 web.admin.media.delete.header=Delete media
@@ -63,3 +64,5 @@ web.auth.error.back=Back
 web.auth.success.header=You are now logged in, you'll be redirected to the homepage soon
 web.auth.post-plex=When authentication is done on Plex.tv, click on the button below
 web.auth.pre-plex=Click on the button below to log on Plex.tv, then come back to this page
+web.admin.requirement.list.header=All requirements
+web.media-list.table.user=User
