--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -41,6 +41,7 @@ web.navbar.admin.media.delete=Supprimer média
 web.navbar.admin.requirement.add=Ajout exigence
 web.navbar.admin.requirement.complete=Compléter exigence
 web.navbar.admin.requirement.abandon=Abandonner exigence
+web.navbar.admin.requirement.list=Liste des exigences
 web.navbar.media-list=Liste de lecture
 web.navbar.logout=Déconnexion
 web.admin.media.delete.header=Supprimer média
@@ -63,4 +64,6 @@ web.auth.error.back=Retour
 web.auth.success.header=Vous êtes connecté, vous allez bientôt être redirigé
 web.auth.post-plex=Quand l'autentification sur Plex.tv est terminée, cliquez sur le boutton ci-dessous
 web.auth.pre-plex=Cliquez sur le boutton ci-dessous pour vous connecter sur Plex.tv, puis revenez sur cette page
+web.admin.requirement.list.header=Toutes les exigences
+web.media-list.table.user=Utilisateur
 
