Fix page titles

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -66,3 +66,5 @@ web.auth.post-plex=When authentication is done on Plex.tv, click on the button b
 web.auth.pre-plex=Click on the button below to log on Plex.tv, then come back to this page
 web.admin.requirement.list.header=All requirements
 web.media-list.table.user=User
+web.auth.login-error=Login error
+web.auth.login-success=Login success
