--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -66,4 +66,6 @@ web.auth.post-plex=Quand l'autentification sur Plex.tv est terminée, cliquez su
 web.auth.pre-plex=Cliquez sur le boutton ci-dessous pour vous connecter sur Plex.tv, puis revenez sur cette page
 web.admin.requirement.list.header=Toutes les exigences
 web.media-list.table.user=Utilisateur
+web.auth.login-error=Erreur connexion
+web.auth.login-success=Connexion réussie
 
