Fix JPA links & page links

--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -68,4 +68,5 @@ web.admin.requirement.list.header=Toutes les exigences
 web.media-list.table.user=Utilisateur
 web.auth.login-error=Erreur connexion
 web.auth.login-success=Connexion réussie
+web.api.success=Réussi
 
