--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -68,3 +68,4 @@ web.admin.requirement.list.header=All requirements
 web.media-list.table.user=User
 web.auth.login-error=Login error
 web.auth.login-success=Login success
+web.api.success=Success
