Split soon deleted page

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -38,6 +38,7 @@ web.media-list.table.season=Season
 web.media-list.table.type=Type
 web.media-list.watch-list.header=Your watchlist
 web.navbar.admin.media.delete=Delete media
+web.navbar.admin.media.list-soon-deleted=Soon deleted
 web.navbar.admin.requirement.add=Add requirement
 web.navbar.admin.requirement.complete=Complete requirement
 web.navbar.admin.requirement.abandon=Abandon requirement
