--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -38,6 +38,7 @@ web.media-list.table.season=Saison
 web.media-list.table.type=Type
 web.media-list.watch-list.header=Votre liste de lecture
 web.navbar.admin.media.delete=Supprimer média
+web.navbar.admin.media.list-soon-deleted=Bientôt supprimé
 web.navbar.admin.requirement.add=Ajout exigence
 web.navbar.admin.requirement.complete=Compléter exigence
 web.navbar.admin.requirement.abandon=Abandonner exigence
