Clean messages and get lang from header

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -28,18 +28,12 @@ media.type.tv=Series
 web.admin.media.delete.delete=Delete
 web.admin.media.delete.header=Delete media
 web.admin.media.delete.media=Media
-web.admin.requirement.abandon.header=Abandon requirement
-web.admin.requirement.abandon.requirement=Requirement
-web.admin.requirement.abandon.submit=Abandon
 web.admin.requirement.add.group=User group
 web.admin.requirement.add.header=Add requirement
 web.admin.requirement.add.overseerr=Overseerr ID
 web.admin.requirement.add.season=Season
 web.admin.requirement.add.submit=Add
 web.admin.requirement.add.type=Type
-web.admin.requirement.complete.header=Complete requirement
-web.admin.requirement.complete.requirement=Requirement
-web.admin.requirement.complete.submit=Complete
 web.api.success=Success
 web.auth.error.back=Back
 web.auth.header=Login with your Plex.tv account
@@ -52,7 +46,7 @@ web.media-list.table.action.abandon=Abandon
 web.media-list.table.action.complete=Complete
 web.media-list.table.action=Actions
 web.media-list.table.availability=Availability
-web.media-list.table.count=Count
+web.media-list.table.count=Episodes
 web.media-list.table.id=ID
 web.media-list.table.name=Name
 web.media-list.table.season=Season
@@ -60,9 +54,7 @@ web.media-list.table.type=Type
 web.media-list.table.user=User
 web.navbar.admin.media.delete=Delete media
 web.navbar.admin.media.list-soon-deleted=Soon deleted
-web.navbar.admin.requirement.abandon=Abandon requirement
 web.navbar.admin.requirement.add=Add requirement
-web.navbar.admin.requirement.complete=Complete requirement
 web.navbar.admin.requirement.list=List requirements
 web.navbar.logout=Logout
 web.navbar.media-list=Media list
