--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -28,18 +28,12 @@ media.type.tv=Série
 web.admin.media.delete.delete=Supprimer
 web.admin.media.delete.header=Supprimer média
 web.admin.media.delete.media=Média
-web.admin.requirement.abandon.header=Abandonner exigence
-web.admin.requirement.abandon.requirement=Exigence
-web.admin.requirement.abandon.submit=Abandonner
 web.admin.requirement.add.group=Groupe utilisateur
 web.admin.requirement.add.header=Ajout exigence
 web.admin.requirement.add.overseerr=ID Overseerr
 web.admin.requirement.add.season=Saison
 web.admin.requirement.add.submit=Ajouter
 web.admin.requirement.add.type=Type
-web.admin.requirement.complete.header=Compléter exigence
-web.admin.requirement.complete.requirement=Exigence
-web.admin.requirement.complete.submit=Compléter
 web.api.success=Réussi
 web.auth.error.back=Retour
 web.auth.header=Connectez-vous avec votre compte Plex.tv
@@ -52,7 +46,7 @@ web.media-list.table.action.abandon=Abandonner
 web.media-list.table.action.complete=Compléter
 web.media-list.table.action=Actions
 web.media-list.table.availability=Disponibilité
-web.media-list.table.count=Total
+web.media-list.table.count=Episodes
 web.media-list.table.id=ID
 web.media-list.table.name=Nom
 web.media-list.table.season=Saison
@@ -60,9 +54,7 @@ web.media-list.table.type=Type
 web.media-list.table.user=Utilisateur
 web.navbar.admin.media.delete=Supprimer média
 web.navbar.admin.media.list-soon-deleted=Bientôt supprimé
-web.navbar.admin.requirement.abandon=Abandonner exigence
 web.navbar.admin.requirement.add=Ajout exigence
-web.navbar.admin.requirement.complete=Compléter exigence
 web.navbar.admin.requirement.list=Liste des exigences
 web.navbar.logout=Déconnexion
 web.navbar.media-list=Liste de lecture
