New waiting availability

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -23,6 +23,7 @@ mail.watchlist.subject=Plex: Your watchlist
 media.availability.downloaded=Available
 media.availability.downloading=Downloading
 media.availability.manual=Manual
+media.availability.waiting=Pending
 media.type.movie=Movie
 media.type.tv=Series
 web.admin.media.delete.delete=Delete
@@ -46,7 +47,7 @@ web.media-list.table.action.abandon=Abandon
 web.media-list.table.action.complete=Complete
 web.media-list.table.action=Actions
 web.media-list.table.availability=Availability
-web.media-list.table.count=Episodes
+web.media-list.table.episodes=Episodes
 web.media-list.table.id=ID
 web.media-list.table.name=Name
 web.media-list.table.season=Season
