--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -23,6 +23,7 @@ mail.watchlist.subject=Plex : Votre liste de lecture
 media.availability.downloaded=Disponible
 media.availability.downloading=En téléchargement
 media.availability.manual=Manuel
+media.availability.waiting=En attente
 media.type.movie=Film
 media.type.tv=Série
 web.admin.media.delete.delete=Supprimer
@@ -46,7 +47,7 @@ web.media-list.table.action.abandon=Abandonner
 web.media-list.table.action.complete=Compléter
 web.media-list.table.action=Actions
 web.media-list.table.availability=Disponibilité
-web.media-list.table.count=Episodes
+web.media-list.table.episodes=Episodes
 web.media-list.table.id=ID
 web.media-list.table.name=Nom
 web.media-list.table.season=Saison
