Sonarr & Radarr links

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -58,4 +58,5 @@ web.navbar.admin.media.list-soon-deleted=Soon deleted
 web.navbar.admin.requirement.add=Add requirement
 web.navbar.admin.requirement.list=List requirements
 web.navbar.logout=Logout
+web.media-list.table.links=Links
 web.navbar.media-list=Media list
