--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -42,6 +42,7 @@ web.auth.logged-out=Vous avez été déconnecté.
 web.auth.login-error=Erreur connexion
 web.auth.login-success=Connexion réussie
 web.auth.login=Connexion
+web.media-list.table.links=Liens
 web.auth.success.header=Vous êtes connecté, vous allez bientôt être redirigé
 web.media-list.table.action.abandon=Abandonner
 web.media-list.table.action.complete=Compléter
