Mail on media added

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -60,3 +60,22 @@ web.navbar.admin.requirement.list=List requirements
 web.navbar.logout=Logout
 web.media-list.table.links=Links
 web.navbar.media-list=Media list
+mail.media.added.subject=Plex: New media added
+mail.media.available.body.actors=Actors
+mail.media.available.body.audios=Audio languages
+mail.media.available.body.genres=Genres
+mail.media.available.body.length=Length
+mail.media.available.body.release-date=Release date
+mail.media.available.body.subtitles=Subtitles
+mail.media.added.body.season=Season {0}
+mail.media.added.body.episode=Episode {0}
+discord.media.added.subject=Plex: New media added
+discord.media.available.body.summary=Summary
+discord.media.available.body.actors=Actors
+discord.media.available.body.audios=Audio languages
+discord.media.available.body.genres=Genres
+discord.media.available.body.length=Length
+discord.media.available.body.release-date=Release date
+discord.media.available.body.subtitles=Subtitles
+discord.media.added.body.season=Season {0}
+discord.media.added.body.episode=Episode {0}
