--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -13,6 +13,8 @@ mail.media.available.subject=Plex : Média de la liste de lecture disponible
 mail.media.deleted.subject=Plex : Média de votre liste de lecture supprimé
 mail.requirement.added.subject=Plex : Nouveau média ajouté é la liste de lecture
 mail.requirement.manually-abandoned.subject=Plex : Média de votre liste de lecture manuellement marqué comme abandonné
+mail.media.added.subject=Plex : Nouveau média ajouté
+discord.media.added.subject=Plex : Nouveau média ajouté
 mail.requirement.manually-watched.subject=Plex : Média de votre liste de lecture manuellement marqué comme regardé
 mail.watchlist.body.header.available=Médias disponibles en attente de visionnage :
 mail.watchlist.body.header.not-yet-available=Médias en attente de téléchargement :
@@ -60,3 +62,20 @@ web.navbar.admin.requirement.add=Ajout exigence
 web.navbar.admin.requirement.list=Liste des exigences
 web.navbar.logout=Déconnexion
 web.navbar.media-list=Liste de lecture
+mail.media.available.body.release-date=Date de sortie
+mail.media.available.body.actors=Acteurs
+mail.media.available.body.length=Durée
+mail.media.available.body.genres=Genres
+mail.media.available.body.audios=Langues audio
+mail.media.available.body.subtitles=Sous-titres
+mail.media.added.body.season=Saison {0}
+mail.media.added.body.episode=Episode {0}
+discord.media.available.body.release-date=Date de sortie
+discord.media.available.body.actors=Acteurs
+discord.media.available.body.length=Durée
+discord.media.available.body.genres=Genres
+discord.media.available.body.audios=Langues audio
+discord.media.available.body.subtitles=Sous-titres
+discord.media.added.body.season=Saison {0}
+discord.media.added.body.episode=Episode {0}
+discord.media.available.body.summary=Résumé
