Add watched count

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -1,3 +1,13 @@
+discord.media.added.body.episode=Episode {0}
+discord.media.added.body.season=Season {0}
+discord.media.added.subject=Plex: New media added
+discord.media.available.body.actors=Actors
+discord.media.available.body.audios=Audio languages
+discord.media.available.body.genres=Genres
+discord.media.available.body.length=Length
+discord.media.available.body.release-date=Release date
+discord.media.available.body.subtitles=Subtitles
+discord.media.available.body.summary=Summary
 discord.media.available.subject=Plex: Media from your watchlist available
 discord.media.deleted.subject=Plex: Media from your watchlist deleted
 discord.requirement.added.subject=Plex: New media added to watchlist
@@ -5,17 +15,23 @@ discord.requirement.manually-abandoned.subject=Plex: Media from your watchlist m
 discord.requirement.manually-watched.subject=Plex: Media from your watchlist manually marked as watched
 discord.watchlist.body.header.available=Media fully downloaded and waiting to be watched:
 discord.watchlist.body.header.not-yet-available=Media waiting to be downloaded:
-discord.watchlist.body.media.movie=Movie: {0}
 discord.watchlist.body.media.series.episodes=Waiting for episodes {0}
-discord.watchlist.body.media.series=Series: {0} - Season {1}
 discord.watchlist.subject=Plex: Your watchlist
+mail.media.added.body.episode=Episode {0}
+mail.media.added.body.season=Season {0}
+mail.media.added.subject=Plex: New media added
+mail.media.available.body.actors=Actors
+mail.media.available.body.audios=Audio languages
+mail.media.available.body.genres=Genres
+mail.media.available.body.length=Length
+mail.media.available.body.release-date=Release date
+mail.media.available.body.subtitles=Subtitles
 mail.media.available.subject=Plex: Media from your watchlist available
 mail.media.deleted.subject=Plex: Media from your watchlist deleted
 mail.requirement.added.subject=Plex: New media added to watchlist
 mail.requirement.manually-abandoned.subject=Plex: Media from your watchlist manually marked as abandoned
 mail.requirement.manually-watched.subject=Plex: Media from your watchlist manually marked as watched
 mail.watchlist.body.header.available=Media fully downloaded and waiting to be watched:
-mail.watchlist.body.header.not-yet-available=Media waiting to be downloaded:
 mail.watchlist.body.media.movie=Movie: {0}
 mail.watchlist.body.media.series.episodes=Waiting for episodes {0}
 mail.watchlist.body.media.series=Series: {0} - Season {1}
@@ -26,9 +42,6 @@ media.availability.manual=Manual
 media.availability.waiting=Pending
 media.type.movie=Movie
 media.type.tv=Series
-web.admin.media.delete.delete=Delete
-web.admin.media.delete.header=Delete media
-web.admin.media.delete.media=Media
 web.admin.requirement.add.group=User group
 web.admin.requirement.add.header=Add requirement
 web.admin.requirement.add.overseerr=Overseerr ID
@@ -49,33 +62,14 @@ web.media-list.table.action=Actions
 web.media-list.table.availability=Availability
 web.media-list.table.episodes=Episodes
 web.media-list.table.id=ID
+web.media-list.table.links=Links
 web.media-list.table.name=Name
 web.media-list.table.season=Season
 web.media-list.table.type=Type
 web.media-list.table.user=User
-web.navbar.admin.media.delete=Delete media
+web.media-list.table.watched=Watched
 web.navbar.admin.media.list-soon-deleted=Soon deleted
 web.navbar.admin.requirement.add=Add requirement
 web.navbar.admin.requirement.list=List requirements
 web.navbar.logout=Logout
-web.media-list.table.links=Links
 web.navbar.media-list=Media list
-mail.media.added.subject=Plex: New media added
-mail.media.available.body.actors=Actors
-mail.media.available.body.audios=Audio languages
-mail.media.available.body.genres=Genres
-mail.media.available.body.length=Length
-mail.media.available.body.release-date=Release date
-mail.media.available.body.subtitles=Subtitles
-mail.media.added.body.season=Season {0}
-mail.media.added.body.episode=Episode {0}
-discord.media.added.subject=Plex: New media added
-discord.media.available.body.summary=Summary
-discord.media.available.body.actors=Actors
-discord.media.available.body.audios=Audio languages
-discord.media.available.body.genres=Genres
-discord.media.available.body.length=Length
-discord.media.available.body.release-date=Release date
-discord.media.available.body.subtitles=Subtitles
-discord.media.added.body.season=Season {0}
-discord.media.added.body.episode=Episode {0}
