--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -1,3 +1,13 @@
+discord.media.added.body.episode=Episode {0}
+discord.media.added.body.season=Saison {0}
+discord.media.added.subject=Plex : Nouveau média ajouté
+discord.media.available.body.actors=Acteurs
+discord.media.available.body.audios=Langues audio
+discord.media.available.body.genres=Genres
+discord.media.available.body.length=Durée
+discord.media.available.body.release-date=Date de sortie
+discord.media.available.body.subtitles=Sous-titres
+discord.media.available.body.summary=Résumé
 discord.media.available.subject=Plex : Média de la liste de lecture disponible
 discord.media.deleted.subject=Plex : Média de votre liste de lecture supprimé
 discord.requirement.added.subject=Plex : Nouveau média ajouté é la liste de lecture
@@ -5,19 +15,23 @@ discord.requirement.manually-abandoned.subject=Plex : Média de votre liste de l
 discord.requirement.manually-watched.subject=Plex : Média de votre liste de lecture manuellement marqué comme regardé
 discord.watchlist.body.header.available=Médias disponibles en attente de visionnage :
 discord.watchlist.body.header.not-yet-available=Médias en attente de téléchargement :
-discord.watchlist.body.media.movie=Film : {0}
 discord.watchlist.body.media.series.episodes=En attente des épisodes {0}
-discord.watchlist.body.media.series=Série : {0} - Saison {1}
 discord.watchlist.subject=Plex : Votre liste de lecture
+mail.media.added.body.episode=Episode {0}
+mail.media.added.body.season=Saison {0}
+mail.media.added.subject=Plex : Nouveau média ajouté
+mail.media.available.body.actors=Acteurs
+mail.media.available.body.audios=Langues audio
+mail.media.available.body.genres=Genres
+mail.media.available.body.length=Durée
+mail.media.available.body.release-date=Date de sortie
+mail.media.available.body.subtitles=Sous-titres
 mail.media.available.subject=Plex : Média de la liste de lecture disponible
 mail.media.deleted.subject=Plex : Média de votre liste de lecture supprimé
 mail.requirement.added.subject=Plex : Nouveau média ajouté é la liste de lecture
 mail.requirement.manually-abandoned.subject=Plex : Média de votre liste de lecture manuellement marqué comme abandonné
-mail.media.added.subject=Plex : Nouveau média ajouté
-discord.media.added.subject=Plex : Nouveau média ajouté
 mail.requirement.manually-watched.subject=Plex : Média de votre liste de lecture manuellement marqué comme regardé
 mail.watchlist.body.header.available=Médias disponibles en attente de visionnage :
-mail.watchlist.body.header.not-yet-available=Médias en attente de téléchargement :
 mail.watchlist.body.media.movie=Film : {0}
 mail.watchlist.body.media.series.episodes=En attente des épisodes {0}
 mail.watchlist.body.media.series=Série : {0} - Saison {1}
@@ -28,9 +42,6 @@ media.availability.manual=Manuel
 media.availability.waiting=En attente
 media.type.movie=Film
 media.type.tv=Série
-web.admin.media.delete.delete=Supprimer
-web.admin.media.delete.header=Supprimer média
-web.admin.media.delete.media=Média
 web.admin.requirement.add.group=Groupe utilisateur
 web.admin.requirement.add.header=Ajout exigence
 web.admin.requirement.add.overseerr=ID Overseerr
@@ -44,7 +55,6 @@ web.auth.logged-out=Vous avez été déconnecté.
 web.auth.login-error=Erreur connexion
 web.auth.login-success=Connexion réussie
 web.auth.login=Connexion
-web.media-list.table.links=Liens
 web.auth.success.header=Vous êtes connecté, vous allez bientôt être redirigé
 web.media-list.table.action.abandon=Abandonner
 web.media-list.table.action.complete=Compléter
@@ -52,30 +62,14 @@ web.media-list.table.action=Actions
 web.media-list.table.availability=Disponibilité
 web.media-list.table.episodes=Episodes
 web.media-list.table.id=ID
+web.media-list.table.links=Liens
 web.media-list.table.name=Nom
 web.media-list.table.season=Saison
 web.media-list.table.type=Type
 web.media-list.table.user=Utilisateur
-web.navbar.admin.media.delete=Supprimer média
+web.media-list.table.watched=Regardé
 web.navbar.admin.media.list-soon-deleted=Bientôt supprimé
 web.navbar.admin.requirement.add=Ajout exigence
 web.navbar.admin.requirement.list=Liste des exigences
 web.navbar.logout=Déconnexion
 web.navbar.media-list=Liste de lecture
-mail.media.available.body.release-date=Date de sortie
-mail.media.available.body.actors=Acteurs
-mail.media.available.body.length=Durée
-mail.media.available.body.genres=Genres
-mail.media.available.body.audios=Langues audio
-mail.media.available.body.subtitles=Sous-titres
-mail.media.added.body.season=Saison {0}
-mail.media.added.body.episode=Episode {0}
-discord.media.available.body.release-date=Date de sortie
-discord.media.available.body.actors=Acteurs
-discord.media.available.body.length=Durée
-discord.media.available.body.genres=Genres
-discord.media.available.body.audios=Langues audio
-discord.media.available.body.subtitles=Sous-titres
-discord.media.added.body.season=Saison {0}
-discord.media.added.body.episode=Episode {0}
-discord.media.available.body.summary=Résumé
