Watchlist 3 types + log error on update media

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -15,6 +15,7 @@ discord.requirement.manually-abandoned.subject=Plex: Media from your watchlist m
 discord.requirement.manually-watched.subject=Plex: Media from your watchlist manually marked as watched
 discord.watchlist.body.header.available=Media fully downloaded and waiting to be watched:
 discord.watchlist.body.header.not-yet-available=Media waiting to be downloaded:
+discord.watchlist.body.header.downloading=Media downloading:
 discord.watchlist.body.media.series.episodes=Waiting for episodes {0}
 discord.watchlist.subject=Plex: Your watchlist
 mail.media.added.body.episode=Episode {0}
@@ -73,3 +74,5 @@ web.navbar.admin.requirement.add=Add requirement
 web.navbar.admin.requirement.list=List requirements
 web.navbar.logout=Logout
 web.navbar.media-list=Media list
+mail.watchlist.body.header.downloading=Downloading
+mail.watchlist.body.header.pending=Pending
