--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -15,6 +15,7 @@ discord.requirement.manually-abandoned.subject=Plex : Média de votre liste de l
 discord.requirement.manually-watched.subject=Plex : Média de votre liste de lecture manuellement marqué comme regardé
 discord.watchlist.body.header.available=Médias disponibles en attente de visionnage :
 discord.watchlist.body.header.not-yet-available=Médias en attente de téléchargement :
+discord.watchlist.body.header.downloading=Médias en téléchargement :
 discord.watchlist.body.media.series.episodes=En attente des épisodes {0}
 discord.watchlist.subject=Plex : Votre liste de lecture
 mail.media.added.body.episode=Episode {0}
@@ -73,3 +74,5 @@ web.navbar.admin.requirement.add=Ajout exigence
 web.navbar.admin.requirement.list=Liste des exigences
 web.navbar.logout=Déconnexion
 web.navbar.media-list=Liste de lecture
+mail.watchlist.body.header.downloading=En téléchargement
+mail.watchlist.body.header.pending=En attente
