Media added localized with Tmdb & tvdb

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -76,3 +76,12 @@ web.navbar.logout=Logout
 web.navbar.media-list=Media list
 mail.watchlist.body.header.downloading=Downloading
 mail.watchlist.body.header.pending=Pending
+tvdb.genre.adventure=Adventure
+tvdb.genre.animation=Animation
+tvdb.genre.comedy=Comedy
+tvdb.genre.family=Family
+tvdb.genre.fantasy=Fantasy
+tmdb.genre.16=Animation
+tmdb.genre.35=Comedy
+tmdb.genre.10751=Family
+tmdb.genre.10764=Reality
