--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -76,3 +76,12 @@ web.navbar.logout=Déconnexion
 web.navbar.media-list=Liste de lecture
 mail.watchlist.body.header.downloading=En téléchargement
 mail.watchlist.body.header.pending=En attente
+tvdb.genre.adventure=Aventure
+tvdb.genre.animation=Animation
+tvdb.genre.comedy=Comédie
+tvdb.genre.family=Familial
+tvdb.genre.fantasy=Fantaisie
+tmdb.genre.16=Animation
+tmdb.genre.35=Comédie
+tmdb.genre.10751=Familial
+tmdb.genre.10764=Réalité
