--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -85,3 +85,5 @@ tmdb.genre.16=Animation
 tmdb.genre.35=Comedy
 tmdb.genre.10751=Family
 tmdb.genre.10764=Reality
+tmdb.genre.14=Fantasy
+tmdb.genre.27=Horror
