--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -85,3 +85,5 @@ tmdb.genre.16=Animation
 tmdb.genre.35=Comédie
 tmdb.genre.10751=Familial
 tmdb.genre.10764=Réalité
+tmdb.genre.14=Fantaisie
+tmdb.genre.27=Horreur
