More genre translations

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -87,3 +87,5 @@ tmdb.genre.10751=Family
 tmdb.genre.10764=Reality
 tmdb.genre.14=Fantasy
 tmdb.genre.27=Horror
+tmdb.genre.10759=Action & Adventure
+tmdb.genre.10765=Sci-Fi & Fantasy
