--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -87,3 +87,5 @@ tmdb.genre.10751=Familial
 tmdb.genre.10764=Réalité
 tmdb.genre.14=Fantaisie
 tmdb.genre.27=Horreur
+tmdb.genre.10759=Action & Aventure
+tmdb.genre.10765=Sci-Fi & Fantaisie
