Actors at end of mail + more genre translations

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -89,3 +89,5 @@ tmdb.genre.14=Fantasy
 tmdb.genre.27=Horror
 tmdb.genre.10759=Action & Adventure
 tmdb.genre.10765=Sci-Fi & Fantasy
+tmdb.genre.18=Drama
+tmdb.genre.80=Crime
