--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -89,3 +89,5 @@ tmdb.genre.14=Fantaisie
 tmdb.genre.27=Horreur
 tmdb.genre.10759=Action & Aventure
 tmdb.genre.10765=Sci-Fi & Fantaisie
+tmdb.genre.18=Drame
+tmdb.genre.80=Crime
