Overseerr & plex logo as cid

--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -10,7 +10,7 @@ discord.media.available.body.subtitles=Sous-titres
 discord.media.available.body.summary=Résumé
 discord.media.available.subject=Plex : Média de la liste de lecture disponible
 discord.media.deleted.subject=Plex : Média de votre liste de lecture supprimé
-discord.requirement.added.subject=Plex : Nouveau média ajouté é la liste de lecture
+discord.requirement.added.subject=Plex : Nouveau média ajouté à la liste de lecture
 discord.requirement.manually-abandoned.subject=Plex : Média de votre liste de lecture manuellement marqué comme abandonné
 discord.requirement.manually-watched.subject=Plex : Média de votre liste de lecture manuellement marqué comme regardé
 discord.watchlist.body.header.available=Médias disponibles en attente de visionnage :
@@ -29,7 +29,7 @@ mail.media.available.body.release-date=Date de sortie
 mail.media.available.body.subtitles=Sous-titres
 mail.media.available.subject=Plex : Média de la liste de lecture disponible
 mail.media.deleted.subject=Plex : Média de votre liste de lecture supprimé
-mail.requirement.added.subject=Plex : Nouveau média ajouté é la liste de lecture
+mail.requirement.added.subject=Plex : Nouveau média ajouté à la liste de lecture
 mail.requirement.manually-abandoned.subject=Plex : Média de votre liste de lecture manuellement marqué comme abandonné
 mail.requirement.manually-watched.subject=Plex : Média de votre liste de lecture manuellement marqué comme regardé
 mail.watchlist.body.header.available=Médias disponibles en attente de visionnage :
