--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -91,3 +91,8 @@ tmdb.genre.10759=Action & Aventure
 tmdb.genre.10765=Sci-Fi & Fantaisie
 tmdb.genre.18=Drame
 tmdb.genre.80=Crime
+tmdb.genre.99=Documentaire
+web.theme.auto=Auto
+web.theme.dark=Sombre
+web.theme.light=Clair
+web.theme.theme=Thème
