--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -91,6 +91,7 @@ tmdb.genre.10759=Action & Adventure
 tmdb.genre.10765=Sci-Fi & Fantasy
 tmdb.genre.18=Drama
 tmdb.genre.80=Crime
+tmdb.genre.99=Documentary
 web.theme.auto=Auto
 web.theme.dark=Dark
 web.theme.light=Light
