Translate genre War & Politics

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -92,6 +92,7 @@ tmdb.genre.10765=Sci-Fi & Fantasy
 tmdb.genre.18=Drama
 tmdb.genre.80=Crime
 tmdb.genre.99=Documentary
+tmdb.genre.10768=War & Politics
 web.theme.auto=Auto
 web.theme.dark=Dark
 web.theme.light=Light
