--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -92,6 +92,7 @@ tmdb.genre.10765=Sci-Fi & Fantaisie
 tmdb.genre.18=Drame
 tmdb.genre.80=Crime
 tmdb.genre.99=Documentaire
+tmdb.genre.10768=Guerre & Politique
 web.theme.auto=Auto
 web.theme.dark=Sombre
 web.theme.light=Clair
