More genre translation

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -93,6 +93,8 @@ tmdb.genre.18=Drama
 tmdb.genre.80=Crime
 tmdb.genre.99=Documentary
 tmdb.genre.10768=War & Politics
+tmdb.genre.9648=Mystery
+tmdb.genre.53=Thriller
 web.theme.auto=Auto
 web.theme.dark=Dark
 web.theme.light=Light
