--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -93,6 +93,8 @@ tmdb.genre.18=Drame
 tmdb.genre.80=Crime
 tmdb.genre.99=Documentaire
 tmdb.genre.10768=Guerre & Politique
+tmdb.genre.9648=Mystère
+tmdb.genre.53=Thriller
 web.theme.auto=Auto
 web.theme.dark=Sombre
 web.theme.light=Clair
