Add mail footer in discord too

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -99,4 +99,4 @@ web.theme.auto=Auto
 web.theme.dark=Dark
 web.theme.light=Light
 web.theme.theme=Theme
-mail.footer.app-link=View on website
+mail.footer.app-link=View and manage on website
