--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -99,4 +99,4 @@ web.theme.auto=Auto
 web.theme.dark=Sombre
 web.theme.light=Clair
 web.theme.theme=Thème
-mail.footer.app-link=Voir sur le site
+mail.footer.app-link=Voir et gérer sur le site
