Self add link on media added

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -100,3 +100,6 @@ web.theme.dark=Dark
 web.theme.light=Light
 web.theme.theme=Theme
 mail.footer.app-link=View and manage on website
+discord.media.available.body.actions=Actions
+discord.media.available.body.actions.requirement.add=Add to my watchlist
+mail.media.available.body.actions.requirement.add=Add to my watchlist
