--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -100,3 +100,6 @@ web.theme.dark=Sombre
 web.theme.light=Clair
 web.theme.theme=Thème
 mail.footer.app-link=Voir et gérer sur le site
+discord.media.available.body.actions=Actions
+discord.media.available.body.actions.requirement.add=Ajouter à ma liste de lecture
+mail.media.available.body.actions.requirement.add=Ajouter à ma liste de lecture
