--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -95,6 +95,7 @@ tmdb.genre.99=Documentary
 tmdb.genre.10768=War & Politics
 tmdb.genre.9648=Mystery
 tmdb.genre.53=Thriller
+tmdb.genre.878=Science Fiction
 web.theme.auto=Auto
 web.theme.dark=Dark
 web.theme.light=Light
