--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -95,6 +95,7 @@ tmdb.genre.99=Documentaire
 tmdb.genre.10768=Guerre & Politique
 tmdb.genre.9648=Mystère
 tmdb.genre.53=Thriller
+tmdb.genre.878=Science Fiction
 web.theme.auto=Auto
 web.theme.dark=Sombre
 web.theme.light=Clair
